--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="sign_in">Sign In</string>
     <string name="sign_out">Sign Out</string>
     <string name="create_account">Crie sua conta</string>
+    <string name="title_activity_segunda">SegundaActivity</string>
+    <string name="desconect">Desconectado</string>
+
+
 
 </resources>
